# ktxpy

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Samples/: PatternPrinter.py  inputFromUser.py  loops.py  numberGuesser.py  printAWord.py  rockPaperScisscors.py  ticTacToe.py
app/src/main/java/com/: Application.kt
app/src/main/jni/: appcmd.c  appinfo.h  atomicio.c  process.cpp  process.h  socket.c
app/src/main/res/drawable/: add_file_icon.xml  app_icon_foreground.xml  background_rectangle.xml  code_blocks_fill0_wght400_grad0_opsz48.xml  current_files_icon.xml  fs_directory_24dp.xml  fs_file_24dp.xml  fs_parent_24dp.xml  fs_unknown_24dp.xml  header_background.xml  ic_add_circle_outline_24dp.xml  ic_baseline_laptop_24.xml  ic_baseline_mood_bad_24.xml  ic_baseline_photo_size_select_actual_24.xml  ic_baseline_sentiment_dissatisfied_24.xml  ic_baseline_wb_iridescent_24.xml  ic_close_24dp.xml  ic_email_white_24dp.xml  ic_help_outline_white_24dp.xml  ic_settings_white_24dp.xml  ic_vpn_key_white_24dp.xml  ic_windows_white_24dp.xml  library_icon.xml  python_icon.xml  python_logo_notext.xml  text_save_icon.xml  theme_selector_icon.xml  white_cursor_icon.xml
app/src/main/res/drawable-v21/: header_background.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml
app/src/main/res/layout/: activity_editor.xml  activity_term.xml  activity_term_floatbar.xml  drawer_term.xml  drawer_term_floatbar.xml
app/src/main/res/menu/: menu_main.xml  menu_session.xml  (+1 more)
(+186 files in other folders)
